--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // ViewModel
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.6.1'
+    // LiveData
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.6.1'
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.6.1'
+
 }
